# train_LogLLM

./: .env.example  .gitignore  README.md  eval.py  model.py  pyproject.toml  train.py
checkpoints/ft_model_BGL_20260525_1414/Bert_ft/: README.md  adapter_config.json  adapter_model.safetensors
checkpoints/ft_model_BGL_20260525_1414/Llama_ft/: README.md  adapter_config.json
demo_app/: README.md  app.py  inference.py  prepare_heldout.py  run_demo.sh
demo_app/boosting/: README.md  infer_boosting.py  prepare_boosting.py
prepareData/: sliding_window.py
scripts/: download_bgl.py  download_models.py
train_boosting/BGL_log_error_classification/model/: catboost_model.cbm  config.json  metrics.json  template_event_ids.json  templates.csv  tfidf.joblib  xgboost_model.json
train_boosting/BGL_log_error_classification/notebooks/: 2_BGL_EDA_Cleaning_v5.ipynb  4_BGL_Windowing_TFIDF_SMOTE_XGBoost_CatBoost_Colab.ipynb
