[project]
name = "logllm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
