[project]
name = "logllm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Pinned to paper versions (LogLLM original requirements.txt)
    "transformers==4.46.3",
    "peft==0.13.2",
    "accelerate==1.0.1",
    # bitsandbytes — paper used 0.45.3 but no aarch64 wheel; use any compatible
    "bitsandbytes",
    # Other deps — let uv resolve compatible versions for Python 3.12
    "numpy",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "torch",
    "tqdm",
    # Demo UI
    "streamlit",
]
